--- a/src/app/components/dashboard/todo/todo.component.html
+++ b/src/app/components/dashboard/todo/todo.component.html
@@ -1,9 +1,13 @@
-<input type="text" [(ngModel)]="newItemName">
-<button (click)="addItem(newItemName)">add item</button>
+<div class="input-container">
+    <input type="text" [(ngModel)]="newItemName" placeholder="add item">
+    <button class="add-button" (click)="addItem(newItemName)">+</button>
+</div>
 
-    <ul>
-        <li *ngFor="let item of items">
-            {{ item.itemName }}
-            <button (click)="removeItem(item.itemId)">delete item</button>
-        </li>
-    </ul>
+<ul>
+    <li *ngFor="let item of items">
+        {{ item.itemName }}
+        <button class="delete-button" (click)="deleteItem(item.itemId)">-</button>
+        
+    </li>
+    
+</ul>
