--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,6 @@
 <div class="content">
-
-
     <h1> {{title}} </h1>
     <app-header></app-header>
-    <app-todo></app-todo>
+    <app-dashboard [coins]="coins" ></app-dashboard>
     <app-footer></app-footer>
-
 </div>
