--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,5 @@
-<p class="footer">footer works!</p>
+<div class="footer">
+    <p class="footer-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam eos soluta tenetur
+        voluptatibus voluptas quidem maxime, aliquid ipsam nihil? Non eaque officiis cum sunt sed id, dignissimos ab
+        quis nemo.</p>
+</div>
