--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,3 +1,20 @@
 .header {
-    text-align: center;
+  width: 100%;
+  height: 100px;
+  background-color: rgba(178, 204, 204, 0.863);
+  top: o px;
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.title {
+  margin: 0;
+}
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
